# MyTools

./: .gitignore  LICENSE  config.ini  contribution.md  description.md  local-automation-cli.code-workspace  pyproject.toml  readme.md  requirements.txt  setup.cfg  setup.py
.github/workflows/: pylint.yml
cli/scripts/: client.py  config.py  context.py  exceptions.py  logger.py  logging.py  main.py  testconfig.py  utility.py
cli/scripts/diagnostics/: commands.py
cli/scripts/github/: client.py  commands.py  exceptions.py  props.py  props.test.py
cli/scripts/google/: __init__.py  client.py  commands.py  properties.py
cli/scripts/google/tasks/: client.py  commands.py  properties.py
cli/scripts/tests/: exceptions.test.py
cli/scripts/video/: commands.py
test/: __init__.py
test/cli/scripts/: __init__.py  test_config.py  test_context.py  test_exceptions.py  test_logging.py  test_utility.py
test/cli/scripts/github/: props.test.py  test_exceptions.py  test_props.py
test/cli/scripts/google/: test_client.py
test/cli/scripts/google/tasks/: test_client.py
