[build-system]
# build-system.requires gives a list of packages that are needed to build your package. Listing something here will only make it available during the build, not after it is installed.
requires = [
    "setuptools>=54",
    "wheel"
]
# build-system.build-backend is technically optional, but you will get setuptools.build_meta:__legacy__ instead if you forget to include it, so always include it. If you were to use a different build system, such as flit or poetry, those would go here, and the configuration details would be completely different than the setuptools configuration described below.
build-backend = "setuptools.build_meta"