[metadata]
# replace with your username:
name = mytools
version = 1.1.0
author = William Luo
author_email = gluo7777@gmail.com
description = Utilities for local automation
long_description = file: readme.md
long_description_content_type = text/markdown
url = https://github.com/gluo7777/MyTools
project_urls =
    Bug Tracker = https://github.com/gluo7777/MyTools/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.8.1
install_requires =
    requests
    click
    colorama
    youtube-dl
[options.entry_points]
console_scripts =
    mytools=cli.scripts.main:entry